# near-cm

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml  wit
benches/: bench.rs
benches/criterion-report/component bundling serde_json/big input byte args/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion-report/component bundling serde_json/big input byte args/report/: index.html
benches/criterion-report/component bundling serde_json/big input deserialized typed args/base/: benchmark.json  estimates.json  tukey.json
benches/criterion-report/component bundling serde_json/big input deserialized typed args/new/: sample.json
benches/criterion-report/component bundling serde_json/big input deserialized typed args/report/: index.html
benches/criterion-report/component bundling serde_json/big input typed args/base/: estimates.json
benches/criterion-report/component bundling serde_json/big input typed args/new/: benchmark.json  sample.json  tukey.json
benches/criterion-report/component bundling serde_json/big input typed args/report/: index.html
benches/criterion-report/component bundling serde_json/report/: index.html
benches/criterion-report/component composed with codec/report/: index.html
benches/criterion-report/module bundling serde_json/report/: index.html
benches/criterion-report/report/: index.html
benches/wasm/: Cargo.toml
benches/wasm/component-bundle/src/: lib.rs
benches/wasm/component-codec-import/: Cargo.toml
benches/wasm/component-codec-import/src/: lib.rs
benches/wasm/module-bundle/src/: lib.rs
benches/wasm/src/: lib.rs
benches/wit/: world.wit
contract/: Cargo.toml
contract/contract/: Cargo.toml
contract/contract/src/: lib.rs
contract/contract/wit/: world.wit
contract/mul/: Cargo.toml
contract/mul/src/: lib.rs
contract/mul/wit/: world.wit
src/: main.rs
(+100 files in other folders)
