[package]
name = "near-cm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = "4"
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = [
    "http1",
    "http2",
    "server",
    "server-graceful",
    "tokio",
] }
reqwest = "0.11"
tokio = { version = "1", features = ["fs", "macros", "io-std", "rt-multi-thread"] }
tokio-stream = "0.1"
serde_core = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
wasmtime = { version = "37", features = ["component-model-async"] }
wit-bindgen = "0.46"
wit-component = "0.239"
wasmlet = { path = "../wasmlet/crates/wasmlet" }
