[package]
name = "near-cm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
reqwest = "0.11"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
wasmtime = { version = "38" }
wit-component = "0.239"
