[package]
name = "near-cm"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[dependencies]
anyhow = "1"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
reqwest = "0.11"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
wac-graph = { version = "0.8" }
wasmtime = { version = "38" }
wit-component = "0.239"

[dev-dependencies]
criterion = { version = "0.5", features = [
    "cargo_bench_support",
    "html_reports",
    "plotters",
    "rayon",
] }
